# thebrentgroup.github.io

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTAINERIZED_EXPERIMENTS_GUIDE.md  README.md  _config.yml  ambitious-budget.md  base-budget.md  build.ninja  compensation.md  evidence-for-biosecurity-risk-redirect.md  evidence-for-biosecurity-risk.md  flake.nix  honeypots-monitoring-technology.md  index.md  org-chart.md  palisade-charity-status.md  pi-cv-lower.md  pi-cv.md  pyproject.toml  repellents-technology.md  sff-long-form.md  spec.md
.github/workflows/: paper.yml
_includes/: footer.html  org-chart.md
assets/: RB-CV-long-2026.docx
brentlab-dumps/: CNAME  HANDOFF_README.md  index.html
brentlab-dumps/brent/: en.html  en.html%3E  index.html
brentlab-dumps/brent/en/: center-biological-futures.html  collaborating-labs.html  join.html  lab-members.html  news.html  publications.html  research.html
brentlab-dumps/brent/en/center-biological-futures/: document-repository.html  documentrepository.html  ethics.html  (+9 more)
brentlab-dumps/etc.clientlibs/labs/: clientlibs.min.4b2618e28cfa9c8fcef7a6257da6e59d.js  clientlibs.min.59b281403f60e551764a3ec8025c1831.js  clientlibs.min.6844071482c583e6b9568ddddfb40378.css  clientlibs.min.a5b4f9e8d6f8c6925cca4e7d8413a5ba.css  clientlibs.min.c7eb158e8a8e469ac685692ebc0eb321.css
experiment/: AGENT_PROMPT.md.template  run_experiment.sh
experiment/.devcontainer/: Dockerfile  devcontainer.json  ensure-claude-perm-skip.sh  init-firewall.sh
paper-typst/: main.typ
repellents-effect-example/: index.html
(+31 files in other folders)
